          embedded subtitles and to set the autoload subtitle paths
 NEW    : LCN support for DVB
 NEW    : Added support for 'in24', 'fl64', 8-bit 'sowt', 'IMA4' and 'NONE'
          audio (old QuickTime PCM)
 NEW    : Added channel encryption detection for DVB-t during scan
 NEW    : Ticket #784, Enable ctrl+A in the MediaInfo window
 CHANGED: Updated FFmpeg
 CHANGED: Updated MediaInfoLib to v0.7.36 Beta
 CHANGED: Updated ZenLib to v0.4.16 Beta
 CHANGED: Updated Little CMS to v2.1(alpha1) - 09282010
 CHANGED: Updated libpng to v1.4.4
 CHANGED: Cleaned up and optimized code for QT PCM, small corrections in MP4Splitter
 CHANGED: Removed DSM Converter
 FIXED  : Ticket #52,  [playlist] shuffle is broken
 FIXED  : Ticket #293, giving "remember last window size" a meaning
 FIXED  : Ticket #564, EVR Sync enabled when it shouldn't be
 FIXED  : Ticket #627, Don't create the "AppData\Roaming\Media Player Classic"
          folder if the "Remember items" in playlist is disabled
 FIXED  : Ticket #628, Enable ctrl+A in Player-->Keys page
 FIXED  : Ticket #647, Weird "keys" listed
 FIXED  : Ticket #651, Make EVR CP stats graph smaller
 FIXED  : Ticket #652, Escape key on certain form causes form to collapse
 FIXED  : Ticket #678, Remember last window size NOT working and mpc-hc.ini
 FIXED  : Ticket #698, VMR-9 (Renderless) + pixel shaders crashes
 FIXED  : Ticket #699, fix EAC3 mediatype and string
 FIXED  : Ticket #712, Audio renderer menu problem with Haali splitter after r2339
 FIXED  : Ticket #724, Frequency range and bandwidth value are currently
          not taken into account when doing a scan
 FIXED  : Ticket #753, DVB-T, internal MPEG-2 filter & wrong aspect ratio
 FIXED  : Ticket #775, Default options of DVD/OGM Preferred language should be
          "Default" not "English"
 FIXED  : Ticket #776, Mouse pointer hovering over window/video should be normal,
          not hand
 FIXED  : Ticket #778, Playlist interface problem